--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/react.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -276,7 +276,7 @@
                 <input type="text" class="form-control" placeholder="Your name">
               </div>
               <div class="field ">
-                <input type="text" class="form-control" placeholder="Your email">
+                <input type="email" class="form-control" placeholder="Your email">
               </div>
               <div class="field ">
                 <textarea class="form-control" placeholder="Message"></textarea>
